more exclamation marks

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             Japan!
         </h1>
         <p>
-            japan was founded May 3rd, 1947. there is 125 million people living in japan currently. the language for japan is japanese.
+            japan was founded May 3rd, 1947. there is 125 million people living in japan currently. the language for japan is japanese!!!
         </p>
       
             <img src="/pics/ice festival.jpg" alt="">
